[package]
name = "mason_cli"
version = "0.1.0"
edition = "2021"
authors = ["Pedro Luz <pedromsluz@gmail.com>"]
include = [
  "src/**/*",
  "Cargo.toml",
  "README.md"
]
homepage = "https://github.com/Narven/mason_cli"
repository = "https://github.com/Narven/mason_cli"
description = "Mason CLI allows developers to create and use reusable templates."
keywords = [
  "cli",
  "generator",
  "command-line",
  "templates",
  "tool"
]
categories = [
  "command-line-interface"
]

[dependencies]
clap = "3.2.22"
